# ModernC-For-CV

./: README.md
compilation/: main  main.cpp  main.i  main.s
hw1/task_1/: commands.sh
hw1/task_2/: .README.md.swp  CMakeLists.txt  build.sh
hw1/task_2/src/: my_cmake_main
hw2/: a.out  task_1.cpp  task_2.cpp
hw3/: CMakeLists.txt
hw3/include/: helper.hpp  path.hpp  web_utils.hpp
hw3/src/: helper.cpp  html_writer.cpp  image_browser.cpp  test.cpp
my_first_library/: CMakeLists.txt  main.cpp  tools.cpp
